test/typechecker.d/invalid/export2.souc.bad
module export2 where
	two: Integer

two: String = 3
